--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,7 +2,7 @@
 /*
   Fonts
 */
-$font-size: 16px !default;
+$font-size: 1.6rem !default;
 $font-bold: 'Archivo', sans-serif;
 $font-regular: 'Open Sans', sans-serif;
 
