--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,10 +1,3 @@
-@import 'variables';
-@import 'vendor/_normalize';
+@import 'vendor/normalize';
 @import 'fonts';
 @import 'base';
-
-// Components
-@import 'components/**/*.scss';
-
-// Containers
-@import 'containers/**/*.scss';
