--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -2,37 +2,61 @@
 @import 'styles/mixins';
 .fs-nav {
 
-  padding: 20px 0;
-
   &__list {
+    display: inline-block;
+    @include font-size(20px);
+
+    li > ul {
+      @include font-size(16px);
+      .fs-nav__link:after {
+        $height: 15px;
+        height: $height;
+        margin-top: -$height - 2px;
+      }
+      li > ul {
+        @include font-size(15px);
+
+        .fs-nav__link:after {
+          $height: 13px;
+          height: $height;
+          margin-top: -$height - 3px;
+        }
+      }
+    }
     list-style: none;
-    padding: 0;
+    list-style-position: outside;
+    margin: 0;
+    padding: 0 5px;
+
+
   }
 
   &__link {
     font-family: $font-bold;
-    @include font-size(20px);
     display: block;
     text-decoration: none;
     color: $color-black;
     transition: all ease-out 200ms;
     margin-bottom: 5px;
-
+    user-select: none;
 
     &:after {
-      transition: all ease-out 200ms;
-      position: absolute;
+      $height: 20px;
       content: '';
+      position: absolute;
       display: block;
+      height: $height;
       width: 0;
-      height: 1px;
-      background: black;
       left: 0;
+      margin-top: -$height - 2px;
+      transition: all ease-out 200ms;
+      background: black;
     }
 
     &--active {
+      pointer-events: none;
       &:after {
-        width: 20px;
+        width: 5px
       }
     }
 
