--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -2,11 +2,36 @@
 @import 'styles/mixins';
 .fs-nav {
 
-  &__list {
-    display: inline-block;
-    @include font-size(20px);
 
-    li > ul {
+  &__list-item {
+    text-align: center;
+
+
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+
+    @include breakpoint(sm) {
+      display: inline-block;
+      margin-bottom: 0;
+
+      &:not(:first-child) {
+        margin-left: 30px;
+      }
+    }
+
+  }
+
+  &__list {
+    width: 100%;
+    padding: 30px 0;
+    margin: 0;
+    @include font-size(16px);
+
+    @include breakpoint(sm) {
+      padding: 0;
+    }
+   /* li > ul {
       @include font-size(16px);
       .fs-nav__link:after {
         $height: 15px;
@@ -22,11 +47,10 @@
           margin-top: -$height - 3px;
         }
       }
-    }
+    }*/
     list-style: none;
     list-style-position: outside;
-    margin: 0;
-    padding: 0 5px;
+
 
 
   }
@@ -37,10 +61,9 @@
     text-decoration: none;
     color: $color-black;
     transition: all ease-out 200ms;
-    margin-bottom: 5px;
     user-select: none;
 
-    &:after {
+   /* &:after {
       $height: 20px;
       content: '';
       position: absolute;
@@ -51,7 +74,7 @@
       margin-top: -$height - 2px;
       transition: all ease-out 200ms;
       background: black;
-    }
+    }*/
 
     &--active {
       pointer-events: none;
