--- a/src/containers/app.scss
+++ b/src/containers/app.scss
@@ -1,3 +1,10 @@
+@import 'styles/variables';
 .fs-app {
-  padding: 20px;
+
+  &__content {
+    max-width: 1400px;
+    display: block;
+    margin: 0 auto;
+    padding: 0 40px;
+  }
 }
