--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,5 +1,28 @@
+@import './variables';
 
 @mixin font-size($size) {
   $remSize: $size / 16px;
   font-size: $remSize * 1rem;
+}
+
+@mixin breakpoint($class) {
+  @if $class == xs {
+    @media (max-width: $breakpoint-xs) { @content; }
+  }
+
+  @else if $class == sm {
+    @media (min-width: $breakpoint-sm) { @content; }
+  }
+
+  @else if $class == md {
+    @media (min-width: $breakpoint-md) { @content; }
+  }
+
+  @else if $class == lg {
+    @media (min-width: $breakpoint-lg) { @content; }
+  }
+
+  @else {
+    @warn "Breakpoint mixin supports: xs, sm, md, lg";
+  }
 }
