--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,5 +10,17 @@ $font-regular: 'Open Sans', sans-serif;
   Colours
 */
 $color-white: #fff;
+$color-grey: #f8f8f8;
 $color-black: #000;
 $color-font: $color-black;
+
+
+/*
+   dimensions
+*/
+$min-width: 320px;
+$max-width: 1400px;
+$breakpoint-xs: 767px;
+$breakpoint-sm: 768px;
+$breakpoint-md: 992px;
+$breakpoint-lg: 1200px;
