--- a/src/containers/header/header-container.scss
+++ b/src/containers/header/header-container.scss
@@ -2,13 +2,16 @@
 @import 'styles/mixins';
 
 .fs-header {
-  background: $color-white;
-
+  $top-margin: 8px;
+  background: rgba(255, 255, 255, .98);
+  z-index: 1;
   width: 100%;
   height: 100%;
 
   @include breakpoint(sm) {
     height: 100px;
+    position: fixed;
+    top: 0;
   }
 
   &__content-inner {
@@ -19,7 +22,7 @@
   }
 
   .fs-nav {
-    margin-top: 8px;
+    margin-top: $top-margin;
   }
 
   .fs-logo {
@@ -28,6 +31,21 @@
 
     @include breakpoint(sm) {
       margin: 0;
+    }
+  }
+
+  .email-link {
+    display: none;
+    position: absolute;
+    right: $grid-gutter;
+    top: $top-margin;
+    width: 20px;
+    img {
+      background: white;
+    }
+
+    @include breakpoint(sm) {
+      display: inherit;
     }
   }
 }
