--- a/src/components/project-info/project-info.scss
+++ b/src/components/project-info/project-info.scss
@@ -3,6 +3,7 @@
 
 .fs-project-info {
   $text-margin: 15px;
+  min-height: 200px;
 
   &__title {
     @include font-size(18px);
@@ -10,7 +11,6 @@
 
   &__title {
     font-family: $font-bold;
-
     margin: $text-margin 0;
   }
 
@@ -19,7 +19,6 @@
       position: absolute;
       bottom: $text-margin + $grid-gutter;
     }
-
   }
 
   &__meta-value {
