--- a/src/components/project-tile/project-tile.scss
+++ b/src/components/project-tile/project-tile.scss
@@ -5,6 +5,7 @@
   text-align: center;
   overflow: hidden;
 
+
   &__overlay,
   &__copy-container {
     transition: all 300ms cubic-bezier(.03,.62,.48,1.17);
@@ -14,6 +15,8 @@
   }
 
 
+
+
     &:hover & {
       @include breakpoint(sm) {
         &__overlay {
@@ -21,7 +24,7 @@
         }
 
         &__copy-container {
-          transform: translateY(-25%);
+          transform: translate(-50%, -50%);
           opacity: 1;
         }
 
@@ -29,9 +32,7 @@
           transform: scale(1.05);
         }
       }
-
     }
-
 
   &__inner {
     position: relative;
@@ -47,18 +48,26 @@
 
 
   &__overlay {
-    background: rgba(0, 0, 0, 0.5);
-    width: 100%;
-    height: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.7);
   }
 
   &__copy-container {
     position: absolute;
     top: 50%;
-    transform: translateY(-25%);
+    left: 50%;
+    width: 100%;
+    padding: 0 10px;
+    box-sizing: border-box;
+    transform: translate(-50%, -50%);
 
     @include breakpoint(sm) {
-      transform: translateY(-10%);
+      transform: translate(-50%, -25%);
     }
 
   }
