--- a/src/containers/app.scss
+++ b/src/containers/app.scss
@@ -6,7 +6,11 @@
     max-width: 1400px;
     display: block;
     margin: 0 auto;
-    padding: 0 40px;
+    padding: 0 10px;
+
+    @include breakpoint(sm) {
+      padding: 0 40px;
+    }
   }
 
   &__pages {
