--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,6 +1,9 @@
 @import 'variables';
 @import 'mixins';
 
+html {
+ // scroll-behavior: smooth
+}
 body {
   background-color: $color-grey;
   color: $color-font;
