--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -5,8 +5,8 @@
   width: 100%;
   min-height: 200px;
   background: url('/img/home_bg.jpg') no-repeat;
-  background-size: 100%;
-
+  background-size: cover;
+  background-position: center 20%;
   @include breakpoint(sm) {
     background-size: cover;
     min-height: 500px;
