--- a/src/components/project-nav/project-info.scss
+++ b/src/components/project-nav/project-info.scss
@@ -1,13 +1,60 @@
 .fs-project-nav {
-
   .col-grid {
     flex: 2;
   }
 
   &__nav-link {
     margin: 25px 0;
+    position: relative;
+
+    $arrow-size: 15px;
+
+    &--next:after,
+    &--back:before,
+    &--top:before {
+      content: '';
+      display: block;
+      position: absolute;
+      width: $arrow-size;
+      height: $arrow-size;
+      opacity: .3;
+      background: url('../../images/arrow.svg') no-repeat;
+    }
+
+    &--back {
+      margin-left: $arrow-size;
+    }
+
     &--next {
       text-align: right;
+      margin-right: $arrow-size;
+      &:after {
+        top: 3px;
+        right: -$arrow-size - 6px;
+
+      }
     }
+
+    &--back {
+      &:before {
+        top: 2px;
+        left: -$arrow-size  - 6px;
+        transform: rotate(-180deg);
+      }
+    }
+
+    &--top {
+      $arrow-size: 30px;
+      &:before {
+        transform: rotate(-90deg);
+        width: $arrow-size;
+        height: $arrow-size;
+        top: -$arrow-size/2;
+        left: -$arrow-size/2;
+      }
+
+    }
+
   }
+
 }
