--- a/src/containers/header/header-container.scss
+++ b/src/containers/header/header-container.scss
@@ -9,7 +9,7 @@
   height: 100%;
 
   @include breakpoint(sm) {
-    height: 100px;
+    height: $header-heigth;
     position: fixed;
     top: 0;
   }
@@ -34,6 +34,15 @@
     }
   }
 
+  .col-grid {
+    &:last-child {
+      @include breakpoint(sm) {
+       align-items: flex-end;
+      }
+    }
+  }
+
+  // TODO: remove?
   .email-link {
     display: none;
     position: absolute;
