--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -4,17 +4,7 @@
   display: flex;
   flex-direction: column;
 
-  &__background {
-
-    width: 100%;
-    min-height: 200px;
-    background: url('/img/contact_bg.jpg') no-repeat;
-    background-size: cover;
-    background-position: center;
-    @include breakpoint(sm) {
-      background-size: cover;
-      min-height: 500px;
-
-    }
+  .fs-background:after {
+    background-image: url('/img/contact_bg.jpg');
   }
 }
