--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -1,6 +1,7 @@
 @import 'styles/variables';
 @import 'styles/mixins';
 .fs-nav {
+  position: relative;
   &__list-item {
     text-align: center;
     &:not(:last-child) {
@@ -15,6 +16,17 @@
         margin-left: 30px;
       }
     }
+
+  }
+
+  &__active-highlight {
+    position: absolute;
+    height: 1px;
+    width: 100px;
+    top: 18px;
+    left: 0;
+    background: lighten($color-black, 80%);
+    transition: all .3s  ease-in-out ;
 
   }
 
