--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -20,6 +20,7 @@
   }
 
   &__active-highlight {
+    visibility: hidden;
     position: absolute;
     height: 1px;
     width: 100px;
@@ -27,14 +28,16 @@
     left: 0;
     background: lighten($color-black, 80%);
     transition: all .3s  ease-in-out ;
-
+    @include breakpoint(sm) {
+      visibility: visible;
+    }
   }
 
   &__list {
     width: 100%;
     padding: 30px 0;
     margin: 0;
-    @include font-size(30px);
+    @include font-size(24px);
 
     @include breakpoint(sm) {
       padding: 0;
