--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,7 +12,7 @@ $font-regular: 'Open Sans', sans-serif;
 $color-white: #fff;
 $color-grey: #f8f8f8;
 $color-grey-dark: darken($color-grey, 50%);
-$color-black: #000;
+$color-black: #3F3F3F;
 $color-font: $color-black;
 
 
