--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,6 +1,12 @@
 @import 'styles/mixins';
 
 .fs-about {
+  .h1 {
+    @include breakpoint(sm) {
+      margin: 0;
+    }
+  }
+
   .fs-background:after {
     background-image: url('/img/about_bg.jpg');
   }
