--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,14 +1,8 @@
 @import 'styles/mixins';
 
 .fs-home {
-  display: flex;
-  width: 100%;
-  min-height: 200px;
-  background: url('/img/home_bg.jpg') no-repeat;
-  background-size: cover;
-  background-position: center 20%;
-  @include breakpoint(sm) {
-    background-size: cover;
-    min-height: 500px;
+
+  .fs-background:after {
+    background-image: url('/img/home_bg.jpg');
   }
 }
