--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -3,7 +3,7 @@
 
 .fs-footer {
   min-height: 150px;
- // text-align: center;
+  text-align: center;
   margin-top: 50px;
 
   @include breakpoint(sm) {
@@ -18,11 +18,8 @@
 
   &__email {
    @include breakpoint(sm) {
-//     text-align: center;
-     position: absolute;
-     bottom: 0;
- //    left: 50%;
- //    transform: translateX(-50%)
+     text-align: center;
+
    }
   }
 }
