--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -5,7 +5,7 @@
   &__list-item {
     text-align: center;
     &:not(:last-child) {
- //     margin-bottom: 40px;
+      margin-bottom: 40px;
     }
 
     @include breakpoint(sm) {
